# OpenCV-Shenanigans

./: CMakeLists.txt  README.md  negative.cpp  transition.cpp
